--- a/OATControl/packages.config
+++ b/OATControl/packages.config
@@ -1,5 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="ControlzEx" version="3.0.2.4" targetFramework="net472" />
+  <package id="Cyotek.Drawing.BitmapFont" version="2.0.0" targetFramework="net472" />
+  <package id="HelixToolkit" version="2.15.0" targetFramework="net472" />
+  <package id="HelixToolkit.Wpf.SharpDX" version="2.15.0" targetFramework="net472" />
   <package id="MahApps.Metro" version="1.6.5" targetFramework="net472" />
+  <package id="SharpDX" version="4.2.0" targetFramework="net472" />
+  <package id="SharpDX.D3DCompiler" version="4.2.0" targetFramework="net472" />
+  <package id="SharpDX.Direct2D1" version="4.2.0" targetFramework="net472" />
+  <package id="SharpDX.Direct3D11" version="4.2.0" targetFramework="net472" />
+  <package id="SharpDX.Direct3D9" version="4.2.0" targetFramework="net472" />
+  <package id="SharpDX.DXGI" version="4.2.0" targetFramework="net472" />
+  <package id="SharpDX.Mathematics" version="4.2.0" targetFramework="net472" />
 </packages>
